--- a/src/FTTBlazor/Pages/About/Link.razor
+++ b/src/FTTBlazor/Pages/About/Link.razor
@@ -43,7 +43,7 @@
     </div>
 
     <div class="mdl-cell--12-col">
-        <h4>Parametros do <span style="font-weight:bold;">FTTSelectEnums</span></h4>
+        <h4>Parametros do <span style="font-weight:bold;">FTTLink</span></h4>
         <h6><span style="font-weight:bold;">Body:</span> Aqui podemos adicionar o conteudo do corpo do MODAL</h6>
         <h6><span style="font-weight:bold;">RenderFragment:</span> Aqui podemos adicionar o conteudo do footer do MODAL</h6>
         <h6><span style="font-weight:bold;">Title:</span> Aqui definimos o titulo do MODAL e o LABEL do LINK</h6>
