--- a/src/FTTBlazor/Shared/NavMenu.razor
+++ b/src/FTTBlazor/Shared/NavMenu.razor
@@ -52,6 +52,12 @@
         </i>
         Link
     </a>
+    <a class="mdl-navigation__link" href="crud">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            wysiwyg
+        </i>
+        Crud
+    </a>
 
     <div style=" bottom: 0px; position: fixed;">
         <a class="mdl-navigation__link" style="width: 88%;" href="https://github.com/luizgustavo77/FTTBlazor">
