--- a/src/FTTBlazor/_Imports.razor
+++ b/src/FTTBlazor/_Imports.razor
@@ -7,3 +7,5 @@
 @using FTTBlazor.Shared
 @using FTTBlazor
 @using FTTBlazor.Components.Forms
+@using FTTBlazor.Components.Forms.Button
+@using FTTBlazor.Components.Forms.Input
