--- a/src/FTTBlazor/_Imports.razor
+++ b/src/FTTBlazor/_Imports.razor
@@ -5,7 +5,13 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using FTTBlazor.Shared
+
 @using FTTBlazor
+@using FTTBlazor.Core
+@using FTTBlazor.Dialog
 @using FTTBlazor.Components.Forms
 @using FTTBlazor.Components.Forms.Button
 @using FTTBlazor.Components.Forms.Input
+@using FTTBlazor.Components.Forms.Link
+@using FTTBlazor.Components.Forms.Select
+@using FTTBlazor.Components.Toast
