Melhorias no namespace

--- a/src/FTTBlazor/Models/LinkPage.razor
+++ b/src/FTTBlazor/Models/LinkPage.razor
@@ -5,7 +5,7 @@
     public Guid Id { get; set; }
 
     [Parameter]
-    public EndpointPokemon Item { get; set; }
+    public FTTBlazor.Common.Pokemon Item { get; set; }
 
     [Parameter]
     public bool isReadOnly { get; set; }
