--- a/src/FTTBlazor/Components/Crud/FTTCrud.razor
+++ b/src/FTTBlazor/Components/Crud/FTTCrud.razor
@@ -87,7 +87,7 @@
 
                                             <td style="@style">
 
-                                                @RetornaValores(col, item);
+                                                @RetornaValores(col, item)
 
                                             </td>
                                         }
