--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -22,7 +22,7 @@
 
     string stringValue { get; set; }
 
-    string endpoint = "https://localhost:44306/FTTBlazor";
+    string endpoint = "https://localhost:44306/PokeAPI";
     string Id { get; set; }
     string Name { get; set; }
 }
@@ -129,7 +129,7 @@
 
     <FTTSelect OnItemSelected="@(e => { Console.WriteLine("Selecionou: ID " + Id + "NAME " + Name); })"
                BorderRight="true"
-               T="EndpointPokemon"
+               T="Common.Pokemon"
                Size="4"
                DataSourceEndpoint="@endpoint"
                Required="true"
