Melhorias no projeto e correção do toaster

--- a/src/FTTBlazor/Components/Toast/FTTToast.razor
+++ b/src/FTTBlazor/Components/Toast/FTTToast.razor
@@ -1,6 +1,4 @@
-﻿@inherits FTTToastBase
-
-<div class="toast @(IsVisible ? "toast-visible" : null) @BackgroundCssClass">
+﻿<div class="toast @(IsVisible ? "toast-visible" : null) @BackgroundCssClass">
     <div class="toast-icon">
         <i class="material-icons" aria-hidden="true">
             @IconCssClass
