--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -129,7 +129,7 @@
 
     <FTTSelect OnItemSelected="@(e => { Console.WriteLine("Selecionou: ID " + Id + "NAME " + Name); })"
                BorderRight="true"
-               T="Common.Pokemon"
+               T="Common.PokeAPI.Pokemon"
                Size="4"
                DataSourceEndpoint="@endpoint"
                Required="true"
