--- a/src/FTTBlazor/_Imports.razor
+++ b/src/FTTBlazor/_Imports.razor
@@ -7,7 +7,7 @@
 @using FTTBlazor.Shared
 
 @using FTTBlazor
-@using FTTBlazor.Core
+@using FTTBlazor.Common.Core
 @using FTTBlazor.Dialog
 @using FTTBlazor.Components.Forms
 @using FTTBlazor.Components.Forms.Button
