--- a/src/FTTBlazor/Pages/About/Crud.razor
+++ b/src/FTTBlazor/Pages/About/Crud.razor
@@ -25,7 +25,7 @@
 
     <div style="height: 30rem;">
 
-        <FTTBlazor.Components.Crud.FTTCrud Interface="Common.Pokemon" Columns="cols" Endpoint="@endpoint" Title="Pokemons">
+        <FTTBlazor.Components.Crud.FTTCrud Interface="Common.PokeAPI.Pokemon" Columns="cols" Endpoint="@endpoint" Title="Pokemons">
             <ModalContent>
                 <FTTInput Label="Nome" @bind-Value="@context.Name" Size="12"></FTTInput>
             </ModalContent>
