--- a/src/FTTBlazor/Shared/MainLayout.razor
+++ b/src/FTTBlazor/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<FTTBlazor.Components.Toast.Toast />
+<FTTBlazor.Components.Toast.FTTToast />
 
 <div class="layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
 
