--- a/src/FTTBlazor/Pages/About/Crud.razor
+++ b/src/FTTBlazor/Pages/About/Crud.razor
@@ -3,7 +3,7 @@
 @code{
     public List<FTTBlazor.Components.Crud.FTTGridColumn> cols = new List<FTTBlazor.Components.Crud.FTTGridColumn>();
 
-    string endpoint = "https://localhost:44306/PokeAPI";
+    string endpoint = "https://localhost:44306/Pokemon";
 
     protected override async Task OnParametersSetAsync()
     {
@@ -25,7 +25,7 @@
 
     <div style="height: 30rem;">
 
-        <FTTBlazor.Components.Crud.FTTCrud Interface="Common.PokeAPI.Pokemon" Columns="cols" Endpoint="@endpoint" Title="Pokemons">
+        <FTTBlazor.Components.Crud.FTTCrud Interface="Common.PokeAPI.PokemonDTO" Columns="cols" Endpoint="@endpoint" Title="Pokemons">
             <ModalContent>
                 <FTTInput Label="Nome" @bind-Value="@context.Name" Size="12"></FTTInput>
             </ModalContent>
