--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -22,7 +22,7 @@
 
     string stringValue { get; set; }
 
-    string endpoint = "https://localhost:44306/PokeAPI";
+    string endpoint = "https://localhost:44306/Pokemon";
     string Id { get; set; }
     string Name { get; set; }
 }
@@ -129,7 +129,7 @@
 
     <FTTSelect OnItemSelected="@(e => { Console.WriteLine("Selecionou: ID " + Id + "NAME " + Name); })"
                BorderRight="true"
-               T="Common.PokeAPI.Pokemon"
+               T="Common.PokeAPI.PokemonDTO"
                Size="4"
                DataSourceEndpoint="@endpoint"
                Required="true"
