--- a/src/FTTBlazor/Pages/About/Crud.razor
+++ b/src/FTTBlazor/Pages/About/Crud.razor
@@ -7,6 +7,7 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        cols.Add(new FTTBlazor.Components.Crud.FTTGridColumn() { FieldName = "Id", FieldDescription = "Jorginho" });
         cols.Add(new FTTBlazor.Components.Crud.FTTGridColumn() { FieldName = "Name", FieldDescription = "Nome" });
 
     }
