--- a/src/FTTBlazor/Shared/NavMenu.razor
+++ b/src/FTTBlazor/Shared/NavMenu.razor
@@ -52,6 +52,12 @@
         </i>
         Link
     </a>
+    <a class="mdl-navigation__link" href="divider">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            double_arrow
+        </i>
+        Divider
+    </a>
     <a class="mdl-navigation__link" href="crud">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
             wysiwyg
