--- a/src/FTTBlazor/Components/Dialog/FTTDialog.razor
+++ b/src/FTTBlazor/Components/Dialog/FTTDialog.razor
@@ -1,4 +1,4 @@
-﻿@namespace FTTBlazor
+﻿@namespace FTTBlazor.Components.Dialog
 @inherits FTTDialogComponent
 
 <div class="@ClassMapper.AsString()"
