--- a/src/FTTBlazor/_Imports.razor
+++ b/src/FTTBlazor/_Imports.razor
@@ -8,7 +8,9 @@
 
 @using FTTBlazor
 @using FTTBlazor.Common.Core
-@using FTTBlazor.Dialog
+@using FTTBlazor.Components.Crud
+@using FTTBlazor.Components.Dialog
+@using FTTBlazor.Components.Divider
 @using FTTBlazor.Components.Forms
 @using FTTBlazor.Components.Forms.Button
 @using FTTBlazor.Components.Forms.Input
