Corrigindo o FTTBlazor no header

--- a/src/FTTBlazor/Shared/MainLayout.razor
+++ b/src/FTTBlazor/Shared/MainLayout.razor
@@ -24,7 +24,7 @@
 
             <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;">
                 <img style="width: 30%;" src="../img/logoMicrosoft.png" />
-                <h1 style="text-align: right; margin: 5rem 0px 0px 10rem;">FTT Blazor</h1>
+                <h1 style="text-align: right; margin: 5rem 0px 0px 10rem;font-size: 6rem;">FTT Blazor</h1>
             </div>
 
             @Body
