Melhoria no LOGO

--- a/src/FTTBlazor/Shared/MainLayout.razor
+++ b/src/FTTBlazor/Shared/MainLayout.razor
@@ -5,13 +5,13 @@
 <div class="layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
 
     @*<header class="header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-            <div aria-expanded="false" role="button" tabindex="0" class="mdl-layout__drawer-button">
-                <i class="material-icons"></i>
-            </div>
-            <div class="mdl-layout__header-row">
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                </div>
-            </div>
+        <div aria-expanded="false" role="button" tabindex="0" class="mdl-layout__drawer-button">
+        <i class="material-icons"></i>
+        </div>
+        <div class="mdl-layout__header-row">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+        </div>
+        </div>
         </header>*@
 
     <div class="drawer mdl-layout__drawer" style="transform: translateX(0);">
@@ -22,9 +22,8 @@
     <main class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-grid">
 
-            <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;">
-                <img style="width: 30%;" src="../img/logoMicrosoft.png" />
-                <h1 style="text-align: right; margin: 5rem 0px 0px 10rem;font-size: 6rem;">FTT Blazor</h1>
+            <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;height: 20rem;">
+                <img style="width: 95%;height: 19rem;" src="../img/logoMicrosoft2.png" />
             </div>
 
             @Body
